# wordpress-translated-tuned-llm

./: .gitignore  HUGGINGFACE.md  README.md  colab_training.ipynb  export_for_colab.py  pyproject.toml  requirements.txt  run.py  train_subset.jsonl  upload_to_huggingface.py
.claude/: settings.local.json
cli/: __init__.py  main.py
cli/commands/: dataset.py  download.py  evaluate.py  parse.py  serve.py  train.py
configs/: autotrain_config.yaml  base.yaml  evaluation.yaml
configs/training/: qlora_mistral.yaml
src/: __init__.py
src/wp_translation/: __init__.py
src/wp_translation/dataset/: __init__.py  builder.py  formatter.py  splitter.py
src/wp_translation/downloader/: __init__.py  api_client.py  client.py  fetcher.py  project_registry.py
src/wp_translation/evaluation/: __init__.py  evaluator.py  metrics.py  report.py
src/wp_translation/inference/: __init__.py  export_gguf.py  server.py  translator.py
src/wp_translation/parser/: __init__.py  cleaner.py  pair_extractor.py  po_parser.py
src/wp_translation/training/: __init__.py  config.py  lora_config.py  model_loader.py  trainer.py
src/wp_translation/utils/: __init__.py  config_loader.py  gpu_utils.py  logging.py  paths.py
